@@ -195,6 +195,7 @@ dist_pkgdata_DATA = \
   CMSTOTEM_2014_I1294140.info \
   CMS_2012_PAS_QCD_11_010.info \
   CMS_QCD_10_024.info \
+  CMS_2015_I1356998.info \
   D0_1996_S3214044.info \
   D0_1996_S3324664.info \
   D0_2000_S4480767.info \
