@@ -1,0 +1,41 @@
+# BEGIN PLOT /CMS_2015_I1356998/d01-x01-y01
+Title=Cross section for $log_{10}M_{Y} < 0.5$ (SD dominated)
+XLabel=$log_{10}\xi_{X}$
+YLabel=$\mathrm{d}\sigma / \mathrm{d}log_{10}\xi_{X}$ [mb]
+LegendXPos=0.1
+LogY=0
+YMax=2.0
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1356998/d02-x01-y01
+Title=Cross section for $0.5 < log_{10}M_{Y} < 1.1$ (DD dominated)
+XLabel=$log_{10}\xi_{X}$
+YLabel=$\mathrm{d}\sigma / \mathrm{d}log_{10}\xi_{X}$ [mb]
+LogY=0
+YMax=2.0
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1356998/d03-x01-y01
+Title=$\sigma$ for central gaps, $\Delta\eta > 3$ $(log_{10}M_{X} > 1.1, log_{10}M_{Y} > 1.1)$
+XLabel=$\Delta\eta\equiv-ln\xi$
+YLabel=$\mathrm{d}\sigma / \mathrm{d}\Delta\eta$ [mb]
+LogY=0
+YMax=0.7
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1356998/d04-x01-y01
+Title=Visible cross sections
+XCustomMajorTicks=0.5	$\sigma_\text{no-CASTOR}$	1.5	$\sigma_\text{CASTOR}$	2.5	$\sigma_\text{CG}$
+YLabel=$\sigma$ [mb]
+LegendYPos=0.9
+LogY=0
+# END PLOT
+
+# BEGIN PLOT /CMS_2015_I1356998/d05-x01-y01
+Title=Rapidity gap size in $\eta$ starting from $\eta = \pm 4.7$, $p_T > 200$ MeV
+XLabel=$\Delta\eta^\text{F}$
+YLabel=$\mathrm{d}\sigma / \mathrm{d}\Delta\eta^\text{F}$ [mb]
+LogY=1
+YMin=0.1
+YMax=200
+# END PLOT
