@@ -1,0 +1,91 @@
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1356998/d01-x01-y01
+Path=/REF/CMS_2015_I1356998/d01-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+-5.25	0.25	0.25			1.16958	0.10825799870776294	0.08247157200496423
+-4.75	0.25	0.25			1.16188	0.16698083228550517	0.18395337931867414
+-4.25	0.25	0.25			0.90806	0.12657457703725497	0.15250049656365058
+-3.75	0.25	0.25			0.882806	0.08896724134966756	0.10015203049449371
+-3.25	0.25	0.25			0.979616	0.1304938933437117	0.14572381797084513
+-2.75	0.25	0.25			0.77571	0.09095881531770297	0.11800477543709831
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1356998/d02-x01-y01
+Path=/REF/CMS_2015_I1356998/d02-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+-5.25	0.25	0.25			0.300654	0.045380917857839764	0.043231151576727626
+-4.75	0.25	0.25			0.304116	0.03834192946892475	0.03886558660987892
+-4.25	0.25	0.25			0.257443	0.028810072062728342	0.030458134608337392
+-3.75	0.25	0.25			0.318921	0.05405613574100539	0.036821880387209995
+-3.25	0.25	0.25			0.512769	0.0530173900727865	0.06481587840166944
+-2.75	0.25	0.25			0.670418	0.10160294133030794	0.12088897942889583
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1356998/d03-x01-y01
+Path=/REF/CMS_2015_I1356998/d03-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+3.75	0.75	0.75			0.246687	0.036832698058947566	0.047577485577756214
+5.25	0.75	0.75			0.111711	0.022313777246089468	0.02687327806107956
+6.75	0.75	0.75			0.0315666	0.008733449663264569	0.008617663582385656
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1356998/d04-x01-y01
+Path=/REF/CMS_2015_I1356998/d04-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+0.5	0.5	0.5			2.99	0.2906888370749727	0.32062439083762795
+1.5	0.5	0.5			1.18	0.13152946437965907	0.13152946437965907
+2.5	0.5	0.5			0.58	0.11045361017187261	0.130384048104053
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CMS_2015_I1356998/d05-x01-y01
+Path=/REF/CMS_2015_I1356998/d05-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+0.2	0.2	0.2			81.94323	6.611797	6.611797
+0.6000000000000001	0.20000000000000007	0.19999999999999996			28.35295	2.645863	2.645863
+1.0	0.19999999999999996	0.19999999999999996			12.05424	1.621425	1.621425
+1.4	0.19999999999999996	0.20000000000000018			6.283106	1.114169	1.114169
+1.8	0.19999999999999996	0.19999999999999996			3.890402	0.7959784	0.7959784
+2.1	0.10000000000000009	0.10000000000000009			2.908929	0.6190352	0.6190352
+2.3	0.09999999999999964	0.10000000000000009			2.472198	0.5143112	0.5143112
+2.5	0.10000000000000009	0.10000000000000009			2.233451	0.4546103	0.4546103
+2.7	0.10000000000000009	0.09999999999999964			1.950187	0.3545069	0.3545069
+2.9	0.10000000000000009	0.10000000000000009			1.7286	0.2926966	0.2926966
+3.1	0.10000000000000009	0.10000000000000009			1.545196	0.2835343	0.2835343
+3.3	0.09999999999999964	0.10000000000000009			1.536249	0.2798703	0.2798703
+3.5	0.10000000000000009	0.10000000000000009			1.456244	0.2557369	0.2557369
+3.7	0.10000000000000009	0.09999999999999964			1.325939	0.2179586	0.2179586
+3.9	0.10000000000000009	0.10000000000000009			1.278162	0.1996117	0.1996117
+4.1	0.09999999999999964	0.10000000000000053			1.248404	0.1882026	0.1882026
+4.300000000000001	0.10000000000000053	0.09999999999999964			1.22545	0.1815294	0.1815294
+4.5	0.09999999999999964	0.09999999999999964			1.149224	0.1658703	0.1658703
+4.699999999999999	0.09999999999999964	0.10000000000000053			1.162008	0.1664408	0.1664408
+4.9	0.10000000000000053	0.09999999999999964			1.168555	0.1733079	0.1733079
+5.1	0.09999999999999964	0.10000000000000053			1.128613	0.1428972	0.1428972
+5.300000000000001	0.10000000000000053	0.09999999999999964			1.107704	0.136759	0.136759
+5.5	0.09999999999999964	0.09999999999999964			1.130963	0.1370834	0.1370834
+5.699999999999999	0.09999999999999964	0.10000000000000053			1.148976	0.131127	0.131127
+5.9	0.10000000000000053	0.09999999999999964			1.125811	0.1469718	0.1469718
+6.1	0.09999999999999964	0.10000000000000053			1.169393	0.1313734	0.1313734
+6.300000000000001	0.10000000000000053	0.09999999999999964			1.136357	0.1439752	0.1439752
+6.5	0.09999999999999964	0.09999999999999964			1.244285	0.1315797	0.1315797
+6.699999999999999	0.09999999999999964	0.10000000000000053			1.203433	0.1398203	0.1398203
+6.9	0.10000000000000053	0.09999999999999964			1.189275	0.1672167	0.1672167
+7.1	0.09999999999999964	0.10000000000000053			1.285289	0.2188591	0.2188591
+7.300000000000001	0.10000000000000053	0.09999999999999964			1.413489	0.1055646	0.1055646
+7.5	0.09999999999999964	0.09999999999999964			1.444911	0.1466823	0.1466823
+7.699999999999999	0.09999999999999964	0.10000000000000053			1.488119	0.2019388	0.2019388
+7.9	0.10000000000000053	0.09999999999999964			1.515476	0.1749886	0.1749886
+8.1	0.09999999999999964	0.09999999999999964			1.547939	0.1549391	0.1549391
+8.3	0.10000000000000142	0.09999999999999964			1.575358	0.1721371	0.1721371
+# END YODA_SCATTER2D 
+
+
+
