@@ -138,6 +138,7 @@ dist_pkgdata_DATA = \
   CMS_2013_I1273574.yoda \
   CMS_2014_I1298810.yoda \
   CMS_2014_I1303894.yoda \
+  CMS_2015_I1356998.yoda \
   CMSTOTEM_2014_I1294140.yoda \
   CMS_2012_PAS_QCD_11_010.yoda \
   CMS_QCD_10_024.yoda \
