@@ -186,7 +186,8 @@ RivetCMSAnalyses_la_SOURCES = \
     CMS_2013_I1273574.cc \
     CMS_2014_I1298810.cc \
     CMS_2014_I1303894.cc \
-    CMSTOTEM_2014_I1294140.cc
+    CMSTOTEM_2014_I1294140.cc \
+    CMS_2015_I1356998.cc
 if ENABLE_PRELIMINARY
 RivetCMSAnalyses_la_SOURCES += \
     CMS_QCD_10_024.cc \
